--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
   "require": {
     "php": ">=7.0",
     "ext-json": "*",
-    "swedbank-pay/swedbank-pay-sdk-php": ">=3.0.0"
+    "swedbank-pay/swedbank-pay-sdk-php": "v4.0.0-beta.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~7.5 | ~8.0",
