--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -18,12 +18,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install dependencies
         uses: php-actions/composer@v1
-      - name: Run tests
-        uses: php-actions/phpunit@v1
-        with:
-          config: phpunit.xml.dist
-          bootstrap: tests/bootstrap.php
-          memory: 256M
+      - name: Unit tests
         env:
           MERCHANT_TOKEN: ${{ secrets.MERCHANT_TOKEN }}
           PAYEE_ID: ${{ secrets.PAYEE_ID }}
+        run: ./vendor/bin/phpunit --configuration=./phpunit.xml.dist --bootstrap=./tests/bootstrap.php ./tests/ --coverage-clover=coverage.xml
