--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,4 +20,6 @@
             <directory>../src</directory>
         </whitelist>
     </filter>
+    <log type="coverage-html" target="." />
+    <log type="coverage-clover" target="clover.xml"/>
 </phpunit>
