--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,10 +16,8 @@
         </testsuite>
     </testsuites>
     <filter>
-        <whitelist addUncoveredFilesFromWhitelist="true">
-            <directory>../src</directory>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">./src</directory>
         </whitelist>
     </filter>
-    <log type="coverage-html" target="." />
-    <log type="coverage-clover" target="clover.xml"/>
 </phpunit>
