--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -22,6 +22,8 @@ jobs:
         env:
           MERCHANT_TOKEN: ${{ secrets.MERCHANT_TOKEN }}
           PAYEE_ID: ${{ secrets.PAYEE_ID }}
-        run: |
-          ./vendor/bin/phpunit --configuration=./phpunit.xml.dist --bootstrap=./tests/bootstrap.php ./tests/ --coverage-clover=coverage.xml
-          cat /tmp//swedbankpay.log
+        run: ./vendor/bin/phpunit --configuration=./phpunit.xml.dist --bootstrap=./tests/bootstrap.php ./tests/ --coverage-clover=coverage.xml
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+          path: /tmp/swedbankpay.log
