--- a/tests/config.ini
+++ b/tests/config.ini
@@ -1,3 +1,5 @@
 ; SwedbankPay Merchant Environment
 merchant_token = <merchant_token>
 payee_id = <payee_id>
+merchant_token_mobilepay = <merchant_token>
+payee_id_mobilepay = <payee_id>
